--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@
                             </div>
                             <div class="ms-2">
                                 <h6 class="text-primary mb-0">Mail Us</h6>
-                                <a href="mailto:Ayodeji@whrang.org" class="text-white">Ayodeji@whrang.org</a>
+                                <a href="mailto:Ayodeji@whrang.org" class="text-white">ayodeji@whrang.org</a>
                             </div>
                         </div>
                     </div>
@@ -293,28 +293,28 @@
             <div class="col-sm-6 wow fadeIn" data-wow-delay="0.1s">
               <div class="text-center bg-primary py-5 px-4 h-100">
                 <i class="fa fa-handshake fa-3x text-secondary mb-3"></i>
-                <h1 class="display-5 mb-0" data-toggle="counter-up">250</h1>
+                <h1 class="display-5 mb-0" data-toggle="counter-up">25</h1>
                 <span class="text-dark">Active Advocates</span>
               </div>
             </div>
             <div class="col-sm-6 wow fadeIn" data-wow-delay="0.3s">
               <div class="text-center bg-secondary py-5 px-4 h-100">
                 <i class="fa fa-scale-balanced fa-3x text-primary mb-3"></i>
-                <h1 class="display-5 text-white mb-0" data-toggle="counter-up">1200</h1>
+                <h1 class="display-5 text-white mb-0" data-toggle="counter-up">3</h1>
                 <span class="text-white">Cases Supported</span>
               </div>
             </div>
             <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
               <div class="text-center bg-secondary py-5 px-4 h-100">
                 <i class="fa fa-globe fa-3x text-primary mb-3"></i>
-                <h1 class="display-5 text-white mb-0" data-toggle="counter-up">35</h1>
+                <h1 class="display-5 text-white mb-0" data-toggle="counter-up">1</h1>
                 <span class="text-white">Partner Organizations</span>
               </div>
             </div>
             <div class="col-sm-6 wow fadeIn" data-wow-delay="0.7s">
               <div class="text-center bg-primary py-5 px-4 h-100">
                 <i class="fa fa-trophy fa-3x text-secondary mb-3"></i>
-                <h1 class="display-5 mb-0" data-toggle="counter-up">60</h1>
+                <h1 class="display-5 mb-0" data-toggle="counter-up">6</h1>
                 <span class="text-dark">Human Rights Awards</span>
               </div>
             </div>
@@ -458,7 +458,10 @@
                         <i class="fa fa-phone-alt me-3"></i>+234 801 234 5678
                     </p>
                     <p class="mb-2">
-                        <i class="fa fa-envelope me-3"></i>info@westernhumanrights.org
+                        <i class="fa fa-envelope me-3"></i>ayodeji@whrang.org
+                    </p>
+                    <p class="mb-2">
+                        <i class="fa fa-home me-3"></i>Olalekan Alabi Close, Ibadan, Oyo State
                     </p>
                     <!-- <div class="d-flex pt-3">
                         <a class="btn btn-square btn-primary me-2" href="https://twitter.com/" target="_blank">
@@ -495,23 +498,20 @@
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-light mb-4">Gallery</h4>
                     <div class="row g-2">
-                        <div class="col-4">
-                            <img class="img-fluid w-100" src="img/gallery-1.jpg" alt="">
+                         <!-- <div class="col-4">
+                            <img class="img-fluid w-100" src="img/HR01.webp" alt="">
                         </div>
                         <div class="col-4">
-                            <img class="img-fluid w-100" src="img/gallery-2.jpg" alt="">
+                            <img class="img-fluid w-100" src="img/HR02.jpg" alt="">
                         </div>
                         <div class="col-4">
-                            <img class="img-fluid w-100" src="img/gallery-3.jpg" alt="">
+                            <img class="img-fluid w-100" src="img/HR7.jpg" alt="">
                         </div>
                         <div class="col-4">
-                            <img class="img-fluid w-100" src="img/gallery-4.jpg" alt="">
-                        </div>
-                        <div class="col-4">
-                            <img class="img-fluid w-100" src="img/gallery-5.jpg" alt="">
-                        </div>
-                        <div class="col-4">
-                            <img class="img-fluid w-100" src="img/gallery-6.jpg" alt="">
+                            <img class="img-fluid w-100" src="img/western.png" alt="">
+                        </div> -->
+                        <div class="col-10">
+                            <img class="img-fluid w-100" src="img/western.png" alt="">
                         </div>
                     </div>
                 </div>
