--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                             </div>
                             <div class="ms-2">
                                 <h6 class="text-primary mb-0">Mail Us</h6>
-                                <a href="mailto:Ayodeji@whrang.org" class="text-white">Ayodeji@whrang.org</a>
+                                <a href="mailto:Ayodeji@whrang.org" class="text-white">ayodeji@whrang.org</a>
                             </div>
 
                         </div>
@@ -172,7 +172,7 @@
 
                     <div class="col-lg-6">
                         <div class="carousel-img">
-                            <img class="w-100" src="img/HR1.jpg" alt="Image">
+                            <img class="w-100" src="img/western.png" alt="Image">
                         </div>
                     </div>
                 </div>
@@ -366,19 +366,19 @@
 
                         </div>
                         <div class="col-sm-6 col-md-4 wow fadeIn" data-wow-delay="0.1s">
-                            <div class="service-item h-100">
-                                <div class="btn-square bg-light mb-4">
-                                    <i class="fa fa-utensils fa-2x text-secondary"></i>
-                                </div>
-                                <h3>Nutritious Meals</h3>
-                                <p class="mb-2">
-                                    We provide nutritious meals to children and families in underserved communities,
-                                    ensuring no one goes hungry while promoting healthy living.
-                                </p>
-                                <a href="contact.html">Learn more</a>
-                            </div>
+    <div class="service-item h-100">
+        <div class="btn-square bg-light mb-4">
+            <i class="fa fa-bullhorn fa-2x text-secondary"></i>
+        </div>
+        <h3>Freedom of Speech</h3>
+        <p class="mb-2">
+            We advocate for the protection of every individual’s right to freely express their opinions
+            without fear of censorship, discrimination, or retaliation.
+        </p>
+        <a href="contact.html">Learn more</a>
+    </div>
+</div>
 
-                        </div>
                         <div class="col-sm-6 col-md-4 wow fadeIn" data-wow-delay="0.3s">
                             <div class="service-item h-100">
                                 <div class="btn-square bg-light mb-4">
@@ -559,27 +559,45 @@
 
     <!-- Banner Start -->
     <div class="container-fluid banner py-5">
-        <div class="container">
-            <div class="banner-inner bg-light p-5 wow fadeIn" data-wow-delay="0.1s">
-                <div class="row justify-content-center">
-                    <div class="col-lg-8 py-5 text-center">
-                        <h1 class="display-6 wow fadeIn" data-wow-delay="0.3s">
-                            Our Doors Are Always Open to Those Who Believe in Equality and Compassion!
-                        </h1>
-                        <p class="fs-5 mb-4 wow fadeIn" data-wow-delay="0.5s">
-                            Together, we can protect human rights, promote justice, and uplift those whose voices are
-                            unheard.
-                            Stand with us as we work for a fairer, kinder world.
+    <div class="container">
+        <div class="banner-inner bg-light p-5 wow fadeIn" data-wow-delay="0.1s">
+            <div class="row justify-content-center">
+                <div class="col-lg-8 py-5 text-center">
+                    <h1 class="display-6 wow fadeIn" data-wow-delay="0.3s">
+                        Our Doors Are Always Open to Those Who Believe in Equality and Compassion!
+                    </h1>
+                    <p class="fs-5 mb-4 wow fadeIn" data-wow-delay="0.5s">
+                        Together, we can protect human rights, promote justice, and uplift those whose voices are
+                        unheard.
+                        Stand with us as we work for a fairer, kinder world.
+                    </p>
+
+                    <!-- Contact Info -->
+                    <div class="mb-4 wow fadeIn" data-wow-delay="0.6s">
+                        <p class="mb-1 fs-6">
+                            📧 Email: 
+                            <a href="mailto:ayodeji@whrang.org" class="text-primary text-decoration-none">
+                                ayodeji@whrang.org
+                            </a>
                         </p>
-                        <div class="d-flex justify-content-center wow fadeIn" data-wow-delay="0.7s">
-                            <a class="btn btn-primary py-3 px-4 me-3" href="contact.html">Contact Us</a>
-                            <a class="btn btn-secondary py-3 px-4" href="about.html">Learn More</a>
-                        </div>
+                        <p class="fs-6">
+                            📞 Phone: 
+                            <a href="tel:+2348051976892" class="text-primary text-decoration-none">
+                                +234 805 197 6892
+                            </a>
+                        </p>
+                    </div>
+
+                    <div class="d-flex justify-content-center wow fadeIn" data-wow-delay="0.7s">
+                        <a class="btn btn-primary py-3 px-4 me-3" href="contact.html">Contact Us</a>
+                        <a class="btn btn-secondary py-3 px-4" href="about.html">Learn More</a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+</div>
+
 
     <!-- Banner End -->
 
@@ -594,7 +612,7 @@
             <div class="row g-4">
                 <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay="0.1s">
                     <div class="event-item h-100 p-4">
-                        <img class="img-fluid w-100 mb-4" src="img/HR5.jpg" alt="Human Rights Awareness Workshop">
+                        <img class="img-fluid w-100 mb-4" src="img/western.png" alt="Human Rights Awareness Workshop">
                         <a href="contact.html" class="h3 d-inline-block">Human Rights Advocacy & Awareness</a>
                         <p>We champion justice and equality through educational programs that empower individuals to
                             recognize, protect, and stand up for their fundamental human rights.</p>
@@ -623,7 +641,7 @@
                 </div>
                 <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay="0.5s">
                     <div class="event-item h-100 p-4">
-                        <img class="img-fluid w-100 mb-4" src="img/HR6.jpg" alt="">
+                        <img class="img-fluid w-100 mb-4" src="img/HR01.webp" alt="">
                         <a href="contact.html" class="h3 d-inline-block">Health & Wellness Advocacy</a>
                         <p>We advocate for equal access to healthcare and promote wellness programs that empower
                             vulnerable communities to live healthier, fuller lives.</p>
@@ -900,7 +918,10 @@
                         <i class="fa fa-phone-alt me-3"></i>+234 801 234 5678
                     </p>
                     <p class="mb-2">
-                        <i class="fa fa-envelope me-3"></i>info@westernhumanrights.org
+                        <i class="fa fa-envelope me-3"></i>ayodeji@whrang.org
+                    </p>
+                    <p class="mb-2">
+                        <i class="fa fa-home me-3"></i>Olalekan Alabi Close, Ibadan, Oyo State
                     </p>
                     <!-- <div class="d-flex pt-3">
                         <a class="btn btn-square btn-primary me-2" href="https://twitter.com/" target="_blank">
@@ -938,16 +959,19 @@
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-light mb-4">Gallery</h4>
                     <div class="row g-2">
-                        <div class="col-4">
-                            <img class="img-fluid w-100" src="img/HR5.jpg" alt="">
+                        <!-- <div class="col-4">
+                            <img class="img-fluid w-100" src="img/HR01.webp" alt="">
                         </div>
                         <div class="col-4">
-                            <img class="img-fluid w-100" src="img/HR6.jpg" alt="">
+                            <img class="img-fluid w-100" src="img/HR02.jpg" alt="">
                         </div>
                         <div class="col-4">
                             <img class="img-fluid w-100" src="img/HR7.jpg" alt="">
                         </div>
                         <div class="col-4">
+                            <img class="img-fluid w-100" src="img/western.png" alt="">
+                        </div> -->
+                        <div class="col-10">
                             <img class="img-fluid w-100" src="img/western.png" alt="">
                         </div>
                         <!-- <div class="col-4">
