--- a/contact.html
+++ b/contact.html
@@ -76,7 +76,7 @@
                             </div>
                             <div class="ms-2">
                                 <h6 class="text-primary mb-0">Mail Us</h6>
-                                <a href="mailto:Ayodeji@whrang.org" class="text-white">Ayodeji@whrang.org</a>
+                                <a href="mailto:Ayodeji@whrang.org" class="text-white">ayodeji@whrang.org</a>
                             </div>
 
                         </div>
@@ -356,7 +356,10 @@ ${message}`;
                         <i class="fa fa-phone-alt me-3"></i>+234 801 234 5678
                     </p>
                     <p class="mb-2">
-                        <i class="fa fa-envelope me-3"></i>info@westernhumanrights.org
+                        <i class="fa fa-envelope me-3"></i>ayodeji@whrang.org
+                    </p>
+                    <p class="mb-2">
+                        <i class="fa fa-home me-3"></i>Olalekan Alabi Close, Ibadan, Oyo State
                     </p>
                     <!-- <div class="d-flex pt-3">
                         <a class="btn btn-square btn-primary me-2" href=""><i class="fab fa-x-twitter"></i></a>
@@ -385,23 +388,24 @@ ${message}`;
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-light mb-4">Gallery</h4>
                     <div class="row g-2">
-                        <div class="col-4">
-                            <img class="img-fluid w-100" src="img/gallery-1.jpg" alt="">
+                        <!-- <div class="col-4">
+                            <img class="img-fluid w-100" src="img/HR01.webp" alt="">
                         </div>
                         <div class="col-4">
-                            <img class="img-fluid w-100" src="img/gallery-2.jpg" alt="">
+                            <img class="img-fluid w-100" src="img/HR02.jpg" alt="">
                         </div>
                         <div class="col-4">
-                            <img class="img-fluid w-100" src="img/gallery-3.jpg" alt="">
+                            <img class="img-fluid w-100" src="img/HR7.jpg" alt="">
                         </div>
                         <div class="col-4">
-                            <img class="img-fluid w-100" src="img/gallery-4.jpg" alt="">
+                            <img class="img-fluid w-100" src="img/western.png" alt="">
                         </div>
                         <div class="col-4">
-                            <img class="img-fluid w-100" src="img/gallery-5.jpg" alt="">
-                        </div>
-                        <div class="col-4">
-                            <img class="img-fluid w-100" src="img/gallery-6.jpg" alt="">
+                            <img class="img-fluid w-100" src="img/Hr04.jpg" alt="">
+                        </div> -->
+
+                        <div class="col-10">
+                            <img class="img-fluid w-100" src="img/western.png" alt="">
                         </div>
                     </div>
                 </div>
