Updated Western Human Right site content

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    
+    <meta name="google-site-verification" content="vGB6IX29W8kAp4YRqtqPWMBKQZuzAEePU8tS_gsEfzk" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
