--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <meta name="google-site-verification" content="vGB6IX29W8kAp4YRqtqPWMBKQZuzAEePU8tS_gsEfzk" />
     <meta charset="utf-8">
     
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
