last commit Zawaf

--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta name="google-site-verification" content="vGB6IX29W8kAp4YRqtqPWMBKQZuzAEePU8tS_gsEfzk" />
     <meta charset="utf-8">
-   
+
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -31,7 +31,7 @@
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
-     <title>Western Human Rights advocate</title>
+    <title>Western Human Rights advocate</title>
     <link rel="shortcut icon" href="img/western.png" type="image/x-icon">
 </head>
 
@@ -132,15 +132,13 @@
                         <a href="contact.html" class="nav-item nav-link active">Contact</a>
                     </div>
                     <div class="d-none d-lg-flex ms-auto">
-                        <a class="btn btn-square btn-dark ms-2" 
-   href="https://wa.me/2348051976892" 
-   target="_blank" 
-   rel="noopener noreferrer">
-  <i class="fab fa-whatsapp"></i>
-</a>
+                        <a class="btn btn-square btn-dark ms-2" href="https://wa.me/2348051976892" target="_blank"
+                            rel="noopener noreferrer">
+                            <i class="fab fa-whatsapp"></i>
+                        </a>
 
-                        <!-- <a class="btn btn-square btn-dark ms-2" href=""><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-square btn-dark ms-2" href=""><i class="fab fa-youtube"></i></a> -->
+                        <a class="btn btn-square btn-dark ms-2"  href="https://www.facebook.com/share/1WemG3qLnh/" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook-f"></i></a>
+                        <!-- <a class="btn btn-square btn-dark ms-2" href=""><i class="fab fa-youtube"></i></a>  -->
                     </div>
                 </div>
             </nav>
@@ -224,15 +222,11 @@
                     <h1 class="display-6 mb-4 wow fadeIn" data-wow-delay="0.2s">
                         If You Have Any Query, Please Contact Us
                     </h1>
-                   <iframe
-  class="w-100"
-  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3964.500662164278!2d3.891502874991648!3d7.400038413518741!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x10398e7e2d28b5db%3A0xb7f82a43d8a9a6e7!2sOlalekan%20Alabi%20Close%2C%20Ibadan%2C%20Oyo%20State!5e0!3m2!1sen!2sng!4v1697111111111!5m2!1sen!2sng"
-  frameborder="0"
-  style="height: 425px; border: 0"
-  allowfullscreen=""
-  aria-hidden="false"
-  tabindex="0">
-</iframe>
+                    <iframe class="w-100"
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3964.500662164278!2d3.891502874991648!3d7.400038413518741!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x10398e7e2d28b5db%3A0xb7f82a43d8a9a6e7!2sOlalekan%20Alabi%20Close%2C%20Ibadan%2C%20Oyo%20State!5e0!3m2!1sen!2sng!4v1697111111111!5m2!1sen!2sng"
+                        frameborder="0" style="height: 425px; border: 0" allowfullscreen="" aria-hidden="false"
+                        tabindex="0">
+                    </iframe>
 
                 </div>
 
@@ -315,32 +309,26 @@ ${message}`;
 
 
     <!-- Newsletter Start -->
-     <div class="container-fluid bg-primary py-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
-  <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-lg-7 text-center wow fadeIn" data-wow-delay="0.5s">
-        <h1 class="display-6 mb-4 text-white">Stay Informed. Stand for Human Rights.</h1>
-        <div class="position-relative w-100 mb-2">
-          <input
-            class="form-control border-0 w-100 ps-4 pe-5"
-            type="text"
-            placeholder="Enter your email address"
-            style="height: 60px;"
-          />
-          <button
-            type="button"
-            class="btn btn-lg-square shadow-none position-absolute top-0 end-0 mt-2 me-2 bg-white"
-          >
-            <i class="fa fa-paper-plane text-primary fs-4"></i>
-          </button>
+    <div class="container-fluid bg-primary py-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-7 text-center wow fadeIn" data-wow-delay="0.5s">
+                    <h1 class="display-6 mb-4 text-white">Stay Informed. Stand for Human Rights.</h1>
+                    <div class="position-relative w-100 mb-2">
+                        <input class="form-control border-0 w-100 ps-4 pe-5" type="text"
+                            placeholder="Enter your email address" style="height: 60px;" />
+                        <button type="button"
+                            class="btn btn-lg-square shadow-none position-absolute top-0 end-0 mt-2 me-2 bg-white">
+                            <i class="fa fa-paper-plane text-primary fs-4"></i>
+                        </button>
+                    </div>
+                    <p class="mb-0 text-white-50">
+                        Get updates on global human rights issues, advocacy campaigns, and ways to make an impact.
+                    </p>
+                </div>
+            </div>
         </div>
-        <p class="mb-0 text-white-50">
-          Get updates on global human rights issues, advocacy campaigns, and ways to make an impact.
-        </p>
-      </div>
     </div>
-  </div>
-</div>
     <!-- Newsletter End -->
 
 
