--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
    rel="noopener noreferrer">
   <i class="fab fa-whatsapp"></i>
 </a>
-
+ <a class="btn btn-square btn-dark ms-2"  href="https://www.facebook.com/share/1WemG3qLnh/" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook-f"></i></a>
                         <!-- <a class="btn btn-square btn-dark ms-2" href=""><i class="fab fa-facebook-f"></i></a>
                         <a class="btn btn-square btn-dark ms-2" href=""><i class="fab fa-youtube"></i></a> -->
                     </div>
