last commit Zawaf

--- a/about.html
+++ b/about.html
@@ -281,7 +281,7 @@
               target="_blank" 
               rel="noopener noreferrer"
             >
-              Follow Facebook Page
+               Facebook Page
             </a>
           </div>
           <!-- <p class="mt-3">
