--- a/about.html
+++ b/about.html
@@ -262,29 +262,24 @@
 
     <!-- Banner Start -->
     <div class="container-fluid banner py-5">
-  <div class="container">
-    <div class="banner-inner bg-light p-5 wow fadeIn" data-wow-delay="0.1s">
-      <div class="row justify-content-center">
-        <div class="col-lg-8 py-5 text-center">
-          <h1 class="display-6 wow fadeIn" data-wow-delay="0.3s">
-            Together, We Stand for Justice and Human Dignity
-          </h1>
-          <p class="fs-5 mb-4 wow fadeIn" data-wow-delay="0.5s">
-            Join our movement to protect human rights, amplify marginalized voices,
-            and create a world where every individual is treated with fairness, respect, and equality.
-          </p>
-          <div class="d-flex justify-content-center wow fadeIn" data-wow-delay="0.7s">
-            <a class="btn btn-primary py-3 px-4 me-3" href="contact.html">Take Action</a>
-            <a 
-              class="btn btn-secondary py-3 px-4" 
-              href="https://www.facebook.com/share/1WemG3qLnh/" 
-              target="_blank" 
-              rel="noopener noreferrer"
-            >
-               Facebook Page
-            </a>
-          </div>
-          <!-- <p class="mt-3">
+        <div class="container">
+            <div class="banner-inner bg-light p-5 wow fadeIn" data-wow-delay="0.1s">
+                <div class="row justify-content-center">
+                    <div class="col-lg-8 py-5 text-center">
+                        <h1 class="display-6 wow fadeIn" data-wow-delay="0.3s">
+                            Together, We Stand for Justice and Human Dignity
+                        </h1>
+                        <p class="fs-5 mb-4 wow fadeIn" data-wow-delay="0.5s">
+                            Join our movement to protect human rights, amplify marginalized voices,
+                            and create a world where every individual is treated with fairness, respect, and equality.
+                        </p>
+                        <div class="d-flex justify-content-center wow fadeIn" data-wow-delay="0.7s">
+                            <a class="btn btn-primary py-3 px-4 me-3" href="contact.html">Take Action</a>
+                            <a class="btn btn-secondary py-3 px-4" href="https://www.facebook.com/share/1WemG3qLnh/">
+                                Facebook Page
+                            </a>
+                        </div>
+                        <!-- <p class="mt-3">
             Follow this link: 
             <a 
               href="https://www.facebook.com/share/1WemG3qLnh/" 
@@ -294,11 +289,11 @@
               https://www.facebook.com/share/1WemG3qLnh/
             </a>
           </p> -->
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
-</div>
 
 
     <!-- Banner End -->
