--- a/about.html
+++ b/about.html
@@ -274,10 +274,11 @@
                             and create a world where every individual is treated with fairness, respect, and equality.
                         </p>
                         <div class="d-flex justify-content-center wow fadeIn" data-wow-delay="0.7s">
-                            <a class="btn btn-primary py-3 px-4 me-3" href="contact.html">Take Action</a>
-                            <a class="btn btn-secondary py-3 px-4" href="https://www.facebook.com/share/1WemG3qLnh/">
-                                Facebook Page
+                            <a class="btn btn-primary py-3 px-4 me-3" href="https://www.facebook.com/share/1WemG3qLnh/">Facebook Page</a>
+                            <a class="btn btn-secondary py-3 px-4" href="contact.html">
+                                Take Action
                             </a>
+
                         </div>
                         <!-- <p class="mt-3">
             Follow this link: 
