last commit Zawaf

--- a/about.html
+++ b/about.html
@@ -275,9 +275,8 @@
                         </p>
                         <div class="d-flex justify-content-center wow fadeIn" data-wow-delay="0.7s">
                             <a class="btn btn-primary py-3 px-4 me-3" href="https://www.facebook.com/share/1WemG3qLnh/">Facebook Page</a>
-                            <a class="btn btn-secondary py-3 px-4" href="contact.html">
-                                Take Action
-                            </a>
+                            <a class="btn btn-secondary py-3 px-4 me-3" href="contact.html">Take action</a>
+                            
 
                         </div>
                         <!-- <p class="mt-3">
